<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_readfileDBlocal"
        android:icon="@drawable/ic_folder_bookmark"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_readfileDBlocal"/>
    <item
        android:id="@+id/action_readfileDBfull"
        android:icon="@drawable/ic_folder_library"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_readfileDBfull"/>
    <item
        android:id="@+id/action_sync_db"
        android:icon="@drawable/ic_cloud_sync"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_sync_db"/>
    <item
        android:id="@+id/action_uploadDB"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_uploadDB"/>
    <item
        android:id="@+id/action_authDropbox"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_authDropbox_login"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>