<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >


            <ImageButton
                android:id="@+id/imgbtnReset"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:contentDescription="@string/desc_refresh"
                android:src="@drawable/ic_refresh" />

            <TextView
                android:id="@+id/textViewTitle"
                style ="@style/CustTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/title_activity_InsertData" />

        
            <ImageButton
                android:id="@+id/imgbtnOK"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:contentDescription="@string/strOK"
                android:src="@drawable/ic_add" />    
        

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <TextView
                android:id="@+id/AppVersion"
                style="@style/CustTextLabel"
                android:layout_width="40dp"
                android:layout_height="wrap_content"                
                android:gravity="left"
                android:text="@string/titoloData"
                android:textColor="@color/LightGreen" />

            <EditText
                android:id="@+id/TextData"
                style="android:editTextStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4.83"
                android:background="@color/LightGray2"
                android:ems="3"
                android:fadingEdge="vertical"
                android:gravity="center"
                android:inputType="date"
                android:textStyle="bold"
                android:focusable = "false" >
                
            </EditText>

            <TextView
                android:id="@+id/textView1"
                style="@style/CustTextLabel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textColor="@color/LightGreen"
                android:layout_weight="2"                               
                android:text="@string/titoloTipoOper" />

            <Spinner
                android:id="@+id/SpinnerTipoOper"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                style="@style/CustTextLabel"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/titoloChi"
                android:textColor="@color/LightGreen"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/SpinnerChiFa"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

            <TextView
                android:id="@+id/textView4"
                style="@style/CustTextLabel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textColor="@color/LightGreen"
                android:layout_weight="2"                
                android:text="@string/titoloADa" />

            <AutoCompleteTextView
                android:id="@+id/TextAutocompleteADa"
                android:layout_width="0dip"
                android:layout_height="wrap_content"                
                android:layout_weight="5"
                android:text="" />

            <Spinner
                android:id="@+id/SpinnerADa"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                style="@style/CustTextLabel"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/titoloPersonale"
                android:textColor="@color/LightGreen" />

            <Spinner
                android:id="@+id/SpinnerPersonale"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/textView6"
                style="@style/CustTextLabel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"         
                android:textColor="@color/LightGreen"       
                android:layout_weight="4"                
                android:text="@string/titoloValore" />

            <EditText
                android:id="@+id/TextValore"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                style="@style/CustTextLabel"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/titoloCategoria"
                android:textColor="@color/LightGreen" />

            <AutoCompleteTextView
                android:id="@+id/TextAutocompleteCategoria"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10" />

            <Spinner
                android:id="@+id/SpinnerCategoria"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                style="@style/CustTextLabel"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/LightGreen"                
                android:text="@string/titoloDescrizione" />

            <EditText
                android:id="@+id/TextDescrizione"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                style="@style/CustTextLabel"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/LightGreen"                
                android:text="@string/titoloNote" />

            <EditText
                android:id="@+id/TextNote"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X"
            android:id="@+id/btnProve"
            android:layout_gravity="right" />

    </LinearLayout>


</RelativeLayout>